Added  login  user form

--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -28,6 +28,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/register">Register</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">login</a>
+              </li>
             </ul>
             <div class="user_option">
               <a href="" class="user_link">
