--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,10 +28,10 @@
             <form action="#" th:action="@{/register}"  
                   method="post" >
               <div>
-                <input type="email"  id = "email"  class="form-control" placeholder="Email" />
+                <input type="email" name="email" id = "email"  class="form-control" placeholder="Email" />
               </div>
               <div>
-                <input type="password" id="password"  class="form-control" placeholder="Password" />
+                <input type="password"  name="password" id="password"  class="form-control" placeholder="Password" />
               </div>
               <div class="btn_box">
                 <button type="submit">
