--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form_container">
-            <form action="#" th:action="@{/register}"  
+            <form action="#" th:action="@{/login}"  
                   method="post" >
               <div>
                 <input type="email" name="email" id = "email"  class="form-control" placeholder="Email" />
