--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -28,6 +28,12 @@
               <li sec:authorize="isAuthenticated()" class="nav-item">
                 <a class="nav-link" href="/profile">Profile</a>
               </li>
+               <li sec:authorize="isAuthenticated()" class="nav-item">
+                <a class="nav-link" href="/logout">logout</a>
+              </li>
+              <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
+                <a class="nav-link" href="/admin">admin</a>
+              </li>
              
             </ul>
           
