--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -6,7 +6,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              PhotoNest
+              Blogify
             </span>
           </a>
 
@@ -34,6 +34,14 @@
               <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
                 <a class="nav-link" href="/admin">admin</a>
               </li>
+               <li sec:authorize="hasRole('ACCESS_ADMIN_PANEL')" class="nav-item">
+                <a class="nav-link" href="/admin">admin</a>
+              </li>
+               <li sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_EDITOR')" class="nav-item">
+                <a class="nav-link" href="/editor">Editor</a>
+              </li>
+              
+
              
             </ul>
           
