changes path from relative to absolute for images and css files

--- a/src/main/resources/templates/post_views/post.html
+++ b/src/main/resources/templates/post_views/post.html
@@ -7,7 +7,7 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
+      <img src="/images/hero-bg.jpg" alt="">
     </div>
     <!-- header section strats -->
     <xml:header th:replace="Fragments/header :: header"></xml:header>
