--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -23,7 +23,7 @@
         <h5>Page not found.....</h5>
 
          <p>Sorry, the page you are looking for does not exist.</p>
-        <p>You can go back to the <a th:href="@{/home}">home page</a> or check out the <a th:href="@{/posts}">posts</a>.</p>
+        <p>You can go back to the <a th:href="@{/home}">home page</a>.</p>
 
 
 
