--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -27,7 +27,10 @@
               </li>
               <li sec:authorize="isAuthenticated()" class="nav-item">
                 <a class="nav-link" href="/profile">Profile</a>
-              </li>     
+              </li>
+               <li sec:authorize="isAuthenticated()" class="nav-item">
+                <a class="nav-link" href="/add_post">Add Post</a>
+              </li>      
               <li sec:authorize="hasRole('ROLE_ADMIN')" class="nav-item">
                 <a class="nav-link" href="/admin">admin</a>
               </li>
