Integrate ckeditor cdn link in head.html

--- a/src/main/resources/templates/Fragments/head.html
+++ b/src/main/resources/templates/Fragments/head.html
@@ -29,6 +29,13 @@
   <!-- responsive style -->
   <link href="/css/responsive.css" rel="stylesheet" />
 
+
+  <!-- CKEditor styles -->
+  <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/46.0.0/ckeditor5.css" />
+  <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>  
+
+
+
 </head>
 
 </html>
