--- a/src/main/resources/templates/Fragments/head.html
+++ b/src/main/resources/templates/Fragments/head.html
@@ -30,9 +30,28 @@
   <link href="/css/responsive.css" rel="stylesheet" />
 
 
+
   <!-- CKEditor styles -->
   <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/46.0.0/ckeditor5.css" />
-  <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>  
+  <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script> 
+  
+  
+  <script src="/js/jquery-3.4.1.min.js"></script>
+    <!-- popper js -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+      </script>
+    <!-- bootstrap js -->
+    <script src="/js/bootstrap.js"></script>
+    <!-- owl slider -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+    </script>
+    <!-- isotope js -->
+    <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
+    <!-- nice select -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
+    <!-- custom js -->
+    <script src="/js/custom.js"></script>
 
 
 
