added update option  to the post

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,10 +23,13 @@
       <div class="posts" th:each="post : ${posts}">
 
         <h3><a th:href="@{'/posts/' + ${post.id}}" th:text="${post.title}">Post Title</a></h3>
-        <h5 th:text="'Author: ' + ${post.account.username} + ' | Created At:' + ${post.postedOn}"></h5>
-        <p th:text="${post.body}">Post content goes here...</p>
+        <h5
+          th:text="'Author: ' + ${post.account.username} + ' | Created At : ' + ${#temporals.format(post.postedOn, 'dd-MM-yyyy HH:mm')} +
+          ' | Updated At : ' + ${#temporals.format(post.updatedOn, 'dd-MM-yyyy HH:mm')}">
+        </h5>
+        <p th:utext="${post.body}">Post content goes here...</p>
         <hr color="grey" size="1">
-          
+
 
       </div>
 
