--- a/src/main/resources/templates/post_views/post.html
+++ b/src/main/resources/templates/post_views/post.html
@@ -15,20 +15,48 @@
         <!-- end header section -->
     </div>
 
-    <!-- about section -->
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">warning</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this post?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <a id="delete" th:href="@{'/post/' + ${post.id} + '/delete'}" class="btn btn-danger" role="button">Delete</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- about section -->
     <section class="about_section layout_padding">
         <div class="container  ">
 
             <div class="post">
                 <h3><a th:text="${post.title}">Post Title</a></h3>
-                <h5 th:text="'Author: ' + ${post.account.username} + ' | Created At:' + ${post.postedOn}"></h5>
-                <p th:text="${post.body}">Post content goes here...</p>
+                <h5 th:text="'Author: ' + ${post.account.username} + ' | Created At: ' + ${#temporals.format(post.postedOn, 'dd-MM-yyyy HH:mm')} + 
+                    ' | Updated At: ' + ${#temporals.format(post.updatedOn, 'dd-MM-yyyy HH:mm')}">
+                </h5>
+                <p th:utext="${post.body}">Post content goes here...</p>
                 <hr color="grey" size="1">
 
                 <!-- check the current user is author or not  -->
-                <div  sec:authorize="isAuthenticated"   th:if="${canEditAll or isAuthor}">
-                    <a th:href="@{/edit_post/{id}(id=${post.id})}" class="btn btn-primary">Edit</a>
+                <div sec:authorize="isAuthenticated" th:if="${canEditAll or isAuthor}">
+                    <a th:href="@{'/post/' + ${post.id} + '/edit'}" class="btn btn-primary">Edit</a> |
+                    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+                        Delete
+                    </button>
+
+
                 </div>
 
             </div>
