--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -25,17 +25,43 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form_container">
-            <form action="#" th:action="@{/register}" th:object="${account}" 
-                  method="post" >
+            <form action="#" th:action="@{/register}" th:object="${account}" method="post">
               <div>
-                <input id = "username" type="text" th:field="*{username}" class="form-control" placeholder="Username" />
+                <input type="text" id="photo" th:field="*{photo}" class="form-control" placeholder="Photo URL" />
+                <p th:if="${#fields.hasErrors('photo')}" th:errors="*{photo}" class="alert alert-danger" role="alert">
+                  Invalid photo URL</p>
               </div>
               <div>
-                <input type="email"  id = "email" th:field="*{email}" class="form-control" placeholder="Email" />
+                <input id="username" type="text" th:field="*{username}" class="form-control" required
+                  placeholder="Username" />
               </div>
               <div>
-                <input type="password" id="password" th:field="*{password}" class="form-control" placeholder="Password" />
+                <input type="email" id="email" th:field="*{email}" class="form-control" placeholder="Email" />
+                <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger" role="alert">
+                  Invalid email</p>
               </div>
+
+              <div>
+                <input type="date" id="date_of_birth" th:field="*{date_of_birth}" required class="form-control"
+                  placeholder="Date of Birth" />
+              </div> 
+              
+              <div>
+                <select id="gender" th:field="*{gender}" class="form-control">
+                  <option value="Male">Male</option>
+                  <option value="Female">Female</option>
+                  <option value="Other">Other</option>
+                </select>
+
+              </div>
+              
+              <div>
+                <input type="password" id="password" th:field="*{password}" required class="form-control"
+                  placeholder="Password" />
+                <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger" role="alert">
+                  Invalid email</p>
+              </div>
+
               <div class="btn_box">
                 <button type="submit">
                   Register
