--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,13 @@
               <div>
                 <input type="password"  name="password" id="password" required class="form-control" placeholder="Password" />
               </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="remember-me" id="remember-me" value="remember-me"/>
+                <label class="form-check-label" for="flexCheckChecked">Remember me |</label>
+
+                <a th:href="@{/forgot-password}" class="link-secondary">Forgot Password</a>
+
+              </div>
               <div class="btn_box">
                 <button type="submit">
                     Login
