--- a/src/main/resources/templates/Fragments/footer.html
+++ b/src/main/resources/templates/Fragments/footer.html
@@ -36,11 +36,11 @@
         <div class="col-md-4 footer-col">
           <div class="footer_detail">
             <a href="" class="footer-logo">
-              Feane
+              Blogify
             </a>
             <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin
-              words, combined with
+             Blogify is a blogging platform that allows users to create, edit, and share posts easily. 
+             It provides a user-friendly interface for both authors and readers.
             </p>
             <div class="footer_social">
               <a href="">
@@ -63,7 +63,8 @@
         </div>
         <div class="col-md-4 footer-col">
           <h4>
-            Opening Hours
+           <!-- create relevant to my blogify web application -->
+           latest updates
           </h4>
           <p>
             Everyday
@@ -76,7 +77,7 @@
       <div class="footer-info">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
+          <a href="https://html.design/">Shivam</a><br><br>
           &copy; <span id="displayYear"></span> Distributed By
           <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
         </p>
