update login html file

--- a/src/main/resources/templates/post_views/add_post.html
+++ b/src/main/resources/templates/post_views/add_post.html
@@ -26,13 +26,19 @@
                         <form action="#" th:action="@{/post/add}" method="post" th:object="${post}">
                             <div class="form-group">
                                 <input type="hidden" name="account" id="account" th:field="*{account}" />
-                                <input type="text" name="title" id="title" th:field="*{title}" class="form-control"
+                                <input type="text" name="title" id="title" th:field="*{title}" required class="form-control"
                                     placeholder="title" />
+                                <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="alert alert-danger"
+                                    role="alert">
+                                    title is required</p>
                             </div>
 
                             <div class="form-group">
-                                <textarea name="body" id="editor" th:field="*{body}" class="form-control"
+                                <textarea name="body" id="editor" th:field="*{body}" required  class="form-control"
                                     placeholder="Body">Body</textarea>
+                                    <p th:if="${#fields.hasErrors('body')}" th:errors="*{body}" class="alert alert-danger"
+                                    role="alert">
+                                    body is required</p>
                             </div>
 
                             <button class="btn btn-primary" type="submit">
