--- a/src/main/resources/templates/Fragments/head.html
+++ b/src/main/resources/templates/Fragments/head.html
@@ -10,9 +10,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="/images/favicon.png" type="">
+  <link rel="shortcut icon" href="/static/images/favicon01.png" type="">
 
-  <title> Feane </title>
+  <title> Blogify </title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
