--- a/src/main/resources/templates/account_views/forgot_password.html
+++ b/src/main/resources/templates/account_views/forgot_password.html
@@ -25,7 +25,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form_container">
-            <form action="#" th:action="@{/reset_password}"  
+             <p th:text="${error}" th:if="${error ne null}" class="alert alert-danger"></p>
+            <form action="#" th:action="@{/reset-password}"  
                   method="post" >
               <div>
                 <input type="email" name="email" id = "email" required class="form-control" placeholder="Email" />
