--- a/src/main/resources/templates/post_views/post.html
+++ b/src/main/resources/templates/post_views/post.html
@@ -15,6 +15,7 @@
         <!-- end header section -->
     </div>
 
+
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
@@ -39,12 +40,12 @@
 
     <!-- about section -->
     <section class="about_section layout_padding">
-        <div class="container  ">
+        <div class="container ">
 
             <div class="post">
                 <h3><a th:text="${post.title}">Post Title</a></h3>
-                <h5 th:text="'Author: ' + ${post.account.username} + ' | Created At: ' + ${#temporals.format(post.postedOn, 'dd-MM-yyyy HH:mm')} + 
-                    ' | Updated At: ' + ${#temporals.format(post.updatedOn, 'dd-MM-yyyy HH:mm')}">
+                <h5 th:text="'Author: ' + ${post.account.username} + ' | Created At: ' + ${#temporals.format(post.createdAt, 'dd-MM-yyyy HH:mm')} + 
+                    ' | Updated At: ' + ${#temporals.format(post.updatedAt, 'dd-MM-yyyy HH:mm')}">
                 </h5>
                 <p th:utext="${post.body}">Post content goes here...</p>
                 <hr color="grey" size="1">
